dist/1.0/bin/sample/retrieveUnpackaged/objects/IntegrationSettings__c.object
<CustomObject>
    <description>Object used to store integration settings</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this is Active setting (used by integration)</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DeleteAfterSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if message should be deleted from queue after being sent</description>
        <label>Delete after Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if email notification about error should be sent</description>
        <inlineHelpText>Indicates if email notification about error should be sent</inlineHelpText>
        <label>Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailRecipient__c</fullName>
        <description>User, who should be notified about error by email</description>
        <inlineHelpText>User, who should be notified about error by email</inlineHelpText>
        <label>Email Recipient</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Integration_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Endpoint__c</fullName>
        <description>Endpoint URL</description>
        <label>Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeout__c</fullName>
        <description>Timeout for message in milliseconds</description>
        <label>Timeout [ms]</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Integration Settings</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>